Simplify: use srcset instead of overlay to fix AdaptiveImage flicker

--- a/packages/markwiemer.com/public/styles.css
+++ b/packages/markwiemer.com/public/styles.css
@@ -228,24 +228,6 @@ a {
   }
 }
 
-.adaptive-image-wrapper {
-  display: inline-block;
-  position: relative;
-}
-
-.adaptive-image-full {
-  height: 100%;
-  inset: 0;
-  opacity: 0;
-  position: absolute;
-  transition: opacity 0.3s;
-  width: 100%;
-}
-
-.adaptive-image-full.loaded {
-  opacity: 1;
-}
-
 div.headerImages {
   display: flex;
   flex-direction: row;
